Partner Section gapping fix

--- a/public/assets/css/module-css/fact-counter.css
+++ b/public/assets/css/module-css/fact-counter.css
@@ -4,7 +4,7 @@
 .fact-counter-one {
   position: relative;
   display: block;
-  padding: 0px 0px 90px;
+  padding: 90px 0px 90px;
   z-index: 1;
 }
 
